--- a/Curriculo/index.html
+++ b/Curriculo/index.html
@@ -46,7 +46,9 @@ hr {
         <h2>Ana Beatriz de Souza de Oliveira</h2>
         <p>Email: ana.b.oliveira56@aluno.senai.org</p>
         <p>(19)99131-0923</p>
-        <a href="https://github.com/souzabweatriz">souzabweatriz</a>
+        <a href="https://github.com/souzabweatriz">Github</a>
+        <br>
+        <a href="https://www.linkedin.com/in/ana-beatriz-de-souza-745b222b1/">Linkedin</a>
         
 
     </header>
